--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.25",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "typescript": "^5.4.2"
@@ -16,5 +17,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node ."
+  },
+  "devDependencies": {
+    "@types/cors": "^2"
   }
 }
